--- a/themes/minimo/layouts/partials/extras/taxonomy_cloud.html
+++ b/themes/minimo/layouts/partials/extras/taxonomy_cloud.html
@@ -8,7 +8,8 @@
 <div class='container list-container'>
   <ul class='list taxonomy-cloud {{- if not $Shuffle }} no-shuffle {{- end -}}'>
   {{- if gt ( len $Data.Terms ) 0 -}}
-    {{- $maxSize := 2.0 -}}
+    <!-- TV edit: prev 2.0 -->
+    {{- $maxSize := 1.5 -}}
     {{- $minSize := 1.0 -}}
     {{- $sizeSpread := ( sub $maxSize $minSize ) -}}
 
