first post and header styling

--- a/themes/minimo/layouts/partials/header.html
+++ b/themes/minimo/layouts/partials/header.html
@@ -33,4 +33,12 @@
         </div>
       </header>
 
+      <style>
+        @media screen and (min-width: 920px) {
+            .site-header {
+                display: none !important;
+            }
+        }
+      </style>
+
       <main id='content'>
