adjust colour and style of link decoration

--- a/themes/minimo/src/stylesheets/extras/variables/_colors.scss
+++ b/themes/minimo/src/stylesheets/extras/variables/_colors.scss
@@ -5,13 +5,14 @@ $color__bluegrey-800: #37474f;
 $color__bluegrey-700: #455a64;
 
 $color__grey-900: #212121;
+$color__grey-600: #bbbbbb;
 $color__grey-400: #bdbdbd;
 $color__grey-200: #eeeeee;
 $color__grey-50: #fafafa;
 
 $color__pure-black: #000000;
 $color__black: $color__grey-900;
-$color__grey: $color__grey-400;
+$color__grey: $color__grey-600;
 $color__light-grey: $color__grey-200;
 $color__white: $color__grey-50;
 $color__pure-white: #ffffff;
