--- a/themes/minimo/src/stylesheets/layouts/entry/_content.scss
+++ b/themes/minimo/src/stylesheets/layouts/entry/_content.scss
@@ -7,7 +7,7 @@
   }
 
   a {
-    border-bottom: 0.125em dashed $color__grey;
+    border-bottom: 0.13em dotted $color__grey;
 
     &:focus,
     &:hover {
