metrics initial re-write

--- a/themes/minimo/src/stylesheets/layouts/_layouts.scss
+++ b/themes/minimo/src/stylesheets/layouts/_layouts.scss
@@ -48,7 +48,7 @@ body {
     width: 4em;
     margin-top: 2.5em;
     margin-bottom: 2.5em;
-    border-bottom: 0.125em solid $color__grey;
+    border-bottom: 0.125em solid $color__accent;
   }
 }
 
